업데이터 : 프로젝트등록

--- a/Preprocessing_Code.ipynb
+++ b/Preprocessing_Code.ipynb
@@ -21,16 +21,12 @@
     "import scipy.misc\n",
     "import scipy.stats\n",
     "import statistics\n",
-    "\n",
     "import cv2\n",
     "from tqdm import tqdm_notebook\n",
     "from pandas import DataFrame\n",
     "import seaborn as sns\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "# import statsmodels.api as sm\n",
-    "# from matplotlib.mlab import bivariate_normal\n",
     "import matplotlib.image as mpimg\n",
-    "\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -55,7 +51,7 @@
     }
    ],
    "source": [
-    "# cwd = os.getcwd()\n",
+    "# cwd = os.getcwd() #현재 열어놓은 폴더의 주소를 가져 오는 함수.\n",
     "dir_name = 'text_folder/Newdata/'\n",
     "path =  'C:/Users/user/processing' + '/' + dir_name # 경로 추적\n",
     "print (\"[%d] CATEGORIES ARE IN \\n %s\" % (len(os.listdir(path)), path))\n",
