--- a/Preprocessing_Code.ipynb
+++ b/Preprocessing_Code.ipynb
@@ -84,14 +84,7 @@
     "            ext = os.path.splitext(file)[1]\n",
     "            if ext.lower() not in valid_extscsv:\n",
     "                continue\n",
-    "#             if category is '1' or category is '2' or category is '3' or category is '4' or category is '5' or category is '6':\n",
-    "#                 break #주희꺼 데이터 분석할 때 데이터 짤라서 비교\n",
-    "            #fullpath = os.path.join(path + category, file)\n",
-    "            #here = os.path.join(\"/\" + category, file)\n",
-    "            #where.append(here)\n",
-    "           \n",
-    "            #if i >= 18 and i <=25:\n",
-    "                #continue\n",
+    "\n",
     "            df = np.loadtxt(path + category+'/'+file,delimiter=',')\n",
     "            df = np.array(df)\n",
     "              \n",
@@ -106,22 +99,12 @@
     "            ext = os.path.splitext(file)[1]\n",
     "            if ext.lower() not in valid_extsimg:\n",
     "                continue\n",
-    "#             if category is '1' or category is '2' or category is '3' or category is '4' or category is '5' or category is '6':\n",
-    "#                 break\n",
-    "            #fullpath = os.path.join(path + category, file)\n",
-    "            #here = os.path.join(\"/\" + category, file)\n",
-    "            #where.append(here)\n",
-    "            #if i >= 18 and i <=25:\n",
-    "                #continue\n",
-    "            img = cv2.imread(path + category+'/'+file) #왜 경로를 현재파일 이후로 지정해야 gray스케일이 나오는지는 알아봐야함\n",
+    "\n",
+    "            img = cv2.imread(path + category+'/'+file)\n",
     "            img = cv2.cvtColor(img,cv2.COLOR_BGR2RGB)\n",
     "            if img.shape[0] != 918:\n",
     "                img = cv2.resize(img,(918,918))\n",
-    "            #img = scipy.misc.imread(dir_name + category+'/'+file).astype(np.int32)\n",
-    "            #img = scipy.misc.imresize(imread(fullpath), [370,370, 3])\n",
-    "            #img = img.astype('int32')\n",
-    "            #img = img.astype('float32')\n",
-    "            #img /= 255\n",
+    "\n",
     "            imgs.append(img) # NORMALIZE IMAGE \n",
     "            label_curr = i\n",
     "            labelsimg.append(label_curr)\n",
@@ -4791,9 +4774,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf-gpu",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)",
    "language": "python",
-   "name": "tf2.0-gpu"
+   "name": "python37364bitbaseconda6e11b9c8d5c54cd9a3095ea967af262b"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4805,7 +4788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5-final"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
