--- a/Classification_Code.ipynb
+++ b/Classification_Code.ipynb
@@ -214,98 +214,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] 지정된 경로를 찾을 수 없습니다: 'c:\\\\Users\\\\user\\\\git_project/text_folder/dataset_revised/classification_quantile_mix/'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-110-be419d20f401>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdir_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'text_folder/dataset_revised/classification_quantile_mix/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcwd\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mdir_name\u001b[0m \u001b[1;31m# 경로 추적\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"[%d] CATEGORIES ARE IN \\n %s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mcategories\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# data 폴더 안에 있는 폴더 명\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] 지정된 경로를 찾을 수 없습니다: 'c:\\\\Users\\\\user\\\\git_project/text_folder/dataset_revised/classification_quantile_mix/'"
-     ]
-    }
-   ],
-   "source": [
-    "cwd = os.getcwd()\n",
-    "#dir_name = 'image/classification/'\n",
-    "dir_name = 'text_folder/dataset_revised/classification_quantile_mix/'\n",
-    "path = cwd + '/' + dir_name # 경로 추적\n",
-    "print (\"[%d] CATEGORIES ARE IN \\n %s\" % (len(os.listdir(path)), path))\n",
-    "\n",
-    "categories = sorted(os.listdir(path)) # data 폴더 안에 있는 폴더 명\n",
-    "ncategories = len(categories)\n",
-    "print(categories)\n",
-    "valid_extscsv = [\".csv\"]\n",
-    "valid_extsimg = [\".jpg\", \".gif\", \".png\", \".jpeg\"]\n",
-    "where = []\n",
-    "imgs = []\n",
-    "labels = []\n",
-    "labelscsv = []\n",
-    "dfs = []\n",
-    "num = 0\n",
-    "\n",
-    "with tf.device(\"/cpu:0\"):\n",
-    "    def imread(path):\n",
-    "        img = scipy.misc.imread(path).astype(np.float)\n",
-    "        if len(img.shape) == 2:\n",
-    "            img = np.transpose(np.array([img, img, img]), (2, 0, 1))\n",
-    "        return img\n",
-    "\n",
-    "    for i, category in enumerate(categories):\n",
-    "        iter = 0\n",
-    "        for file in os.listdir(path + '/'+ category):\n",
-    "            if iter == 0:\n",
-    "                ext = os.path.splitext(file)[1]\n",
-    "                if ext.lower() not in valid_extscsv:\n",
-    "                    continue\n",
-    "                #fullpath = os.path.join(path + category, file)\n",
-    "                #here = os.path.join(\"/\" + category, file)\n",
-    "                #where.append(here)\n",
-    "                df = pd.read_csv(dir_name + category+'/'+file,usecols=['Left Mean Pressure','Left Sum Pressure','Left Kurtosis'\n",
-    "                                                                       ,'Left Skewness','Left Area','Left Arch index','Left width','Left length'\n",
-    "                                                                       ,'Right Max Pressure','Right Mean Pressure','Right std','Right Sum Pressure','Right Kurtosis'\n",
-    "                                                                       ,'Right Skewness','Right Area','Right Arch index','Right width','Right length'])\n",
-    "                df = np.array(df)\n",
-    "                dfs.append(df)\n",
-    "\n",
-    "                label_csv = i\n",
-    "                labelscsv.append(label_csv)\n",
-    "\n",
-    "    # LOAD ALL IMAGES\n",
-    "    for i, category in enumerate(categories):\n",
-    "        iter = 0\n",
-    "        for file in os.listdir(path + '/'+ category):\n",
-    "            if iter == 0:\n",
-    "                ext = os.path.splitext(file)[1]\n",
-    "                if ext.lower() not in valid_extsimg:\n",
-    "                    continue\n",
-    "                #fullpath = os.path.join(path + category, file)\n",
-    "                #here = os.path.join(\"/\" + category, file)\n",
-    "                #where.append(here)\n",
-    "                img = cv2.imread(dir_name + category+'/'+file,1) #왜 경로를 현재파일 이후로 지정해야 gray스케일이 나오는지는 알아봐야함\n",
-    "                #img = scipy.misc.imread(dir_name + category+'/'+file).astype(np.int32)\n",
-    "    #             img = cv2.resize(img, [32,32,3])\n",
-    "                img = cv2.resize(img,(32,32),interpolation = cv2.INTER_CUBIC)\n",
-    "                #img = img.astype('int32')\n",
-    "                img = img.astype('float32')\n",
-    "                img = img/ 127.5 - 1\n",
-    "                imgs.append(img) # NORMALIZE IMAGE a\n",
-    "\n",
-    "                label_curr = i\n",
-    "                labels.append(label_curr)\n",
-    "\n",
-    "    print (\"Num imgs: %d\" % (len(imgs)))\n",
-    "    print (\"Num labels: %d\" % (len(labels)))\n",
-    "    print (ncategories)\n",
-    "    print(imgs[12].shape)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3624,9 +3532,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf-gpu",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tf2.0-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3638,7 +3546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5-final"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
